@@ -109,7 +109,8 @@
 
 	define("SYSMAP_ELEMENT_TYPE_HOST",	0);
 	define("SYSMAP_ELEMENT_TYPE_MAP",	1);
-	define("SYSMAP_ELEMENT_TYPE_IMAGE",	2);
+	define("SYSMAP_ELEMENT_TYPE_TRIGGER",	2);
+	define("SYSMAP_ELEMENT_TYPE_HOST_GROUP",3);
 
 	define("ITEM_TYPE_ZABBIX",0);
 	define("ITEM_TYPE_SNMPV1",1);
